crates/test-ui/ui/msg_send_invalid_receiver.stderr
error[E0277]: the trait bound `Allocated<NSObject>: Encode` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Allocated<NSObject> = unsafe { msg_send![obj, alloc] };
  |                                           ^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Allocated<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Allocated<NSObject>` to implement `EncodeReturn`
  = note: required for `Allocated<NSObject>` to implement `ConvertReturn<MethodFamily<2>>`
  = note: required for `MethodFamily<2>` to implement `RetainSemantics<&NSObject, Allocated<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<2>` to implement `MsgSend<&NSObject, Allocated<NSObject>>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<3>>`
  = note: required for `MethodFamily<3>` to implement `RetainSemantics<&NSObject, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<3>` to implement `MsgSend<&NSObject, Retained<NSObject>>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![cls, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<3>>`
  = note: required for `MethodFamily<3>` to implement `RetainSemantics<&AnyClass, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<3>` to implement `MsgSend<&AnyClass, Retained<NSObject>>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: MessageReceiver` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `MethodFamily<3>` to implement `RetainSemantics<Retained<NSObject>, _, KindSendMessage>`
  = note: required for `MethodFamily<3>` to implement `MsgSend<Retained<NSObject>, _>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: ConvertReturn<MethodFamily<3>>` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<3>>`
  = note: required for `MethodFamily<3>` to implement `RetainSemantics<Retained<NSObject>, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<3>` to implement `MsgSend<Retained<NSObject>, Retained<NSObject>>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Option<Retained<NSObject>>: MessageReceiver` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Option<Retained<NSObject>>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `MethodFamily<3>` to implement `RetainSemantics<Option<Retained<NSObject>>, _, KindSendMessage>`
  = note: required for `MethodFamily<3>` to implement `MsgSend<Option<Retained<NSObject>>, _>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: ConvertReturn<MethodFamily<3>>` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<3>>`
  = note: required for `MethodFamily<3>` to implement `RetainSemantics<Option<Retained<NSObject>>, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<3>` to implement `MsgSend<Option<Retained<NSObject>>, Retained<NSObject>>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: MessageReceiver` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, new] };
  |                                          ^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `MethodFamily<1>` to implement `RetainSemantics<Retained<NSObject>, _, KindSendMessage>`
  = note: required for `MethodFamily<1>` to implement `MsgSend<Retained<NSObject>, _>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: MessageReceiver` is not satisfied
 --> ui/msg_send_invalid_receiver.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, copy] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `MethodFamily<4>` to implement `RetainSemantics<Retained<NSObject>, _, KindSendMessage>`
  = note: required for `MethodFamily<4>` to implement `MsgSend<Retained<NSObject>, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
